# csound

./: .clang-format  .gitignore  CMakeLists.txt
Emscripten/: build.sh
Opcodes/: CMakeLists.txt  hrtfearly.c
Opcodes/ThesisOpcodes/: CMakeLists.txt
Opcodes/ThesisOpcodes/common/: CsoundSignal.cpp  CsoundSignal.hpp  CsoundUtility.cpp  CsoundUtility.hpp  FileIO.cpp  FileIO.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Plot.cpp  Plot.hpp  Signal.cpp  Signal.hpp  SignalData.cpp  SignalData.hpp  SignalMaths.cpp  SignalMaths.hpp  main.cpp
Opcodes/ThesisOpcodes/common/SignalData/: CMakeLists.txt  DFT.cpp  DFT.hpp  Matrix.cpp  Matrix.hpp  MatrixMaths.hpp  MatrixMathsAccelerate.cpp  MatrixMathsGeneric.cpp  Plotter.cpp  Plotter.hpp  StridedVectorMaths.hpp  StridedVectorMathsGeneric.cpp  Vector.cpp  Vector.hpp  VectorMaths.hpp  VectorMathsAccelerate.cpp  VectorMathsGeneric.cpp  VectorMathsTests.cpp  VectorTests.cpp
Opcodes/ThesisOpcodes/dynamicwarping/: BasicDW.cpp  BasicDW.hpp  DifferenceMatrix.cpp  DifferenceMatrix.hpp  DynamicWarping.cpp  DynamicWarping.hpp  FramedDW.cpp  FramedDW.hpp  module.cpp
Opcodes/ThesisOpcodes/dynamicwarping/tests/: test.aif  test.csd
Opcodes/ThesisOpcodes/fastconvolve/: CMakeLists.txt  FastConvolve.cpp  FastConvolve.hpp  module.cpp
Opcodes/ThesisOpcodes/fastconvolve/common/: DATFile.cpp  DFT.cpp  DFT.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Plot.hpp  Vector.cpp  Vector.hpp  arithmetic.cpp  arithmetic.hpp
Opcodes/ThesisOpcodes/fastconvolve/test/: test.csd
Opcodes/ThesisOpcodes/json/: JsonInputOpcode.cpp  JsonInputOpcode.hpp  module.cpp
Opcodes/ThesisOpcodes/modvoc/: CentreOfGravity.cpp  CentreOfGravity.hpp  LogYPsd.cpp  LogYPsd.hpp  ModVoc.cpp  ModVoc.hpp  module.cpp
Opcodes/ThesisOpcodes/modvoc/test/: main.cpp  test.csd
Opcodes/ThesisOpcodes/new_common/: DATFile.hpp  DFT.cpp  DFT.hpp  Detrender.cpp  Detrender.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Interpolator.cpp  Interpolator.hpp  Maths.cpp  Maths.hpp  NetCDFFile.cpp  NetCDFFile.hpp  Plot.cpp  Plot.hpp  Socket.cpp  Socket.hpp  UseAccelerate.hpp  Vector.cpp  Vector.hpp
Opcodes/ThesisOpcodes/resample/: ResampleOpcodes.cpp  ResampleOpcodes.hpp  module.cpp  utilities.hpp
Opcodes/ThesisOpcodes/sofa/: SofaOpcodes.cpp  SofaOpcodes.hpp  module.cpp  utilities.cpp
Opcodes/ThesisOpcodes/sofa/test/: test.csd
Opcodes/ThesisOpcodes/sofaconvert/: main.cpp
Opcodes/ThesisOpcodes/testopcode/: module.cpp  test.csd  testopcode.cpp  testopcode.hpp
Opcodes/ThesisOpcodes/ukfformant/: KalmanFilter.cpp  KalmanFilter.hpp  Resampler.cpp  Resampler.hpp  RingBuffer.cpp  RingBuffer.hpp  ScaledSymmetricSigmaPoints.cpp  ScaledSymmetricSigmaPoints.hpp  UKFFormant.cpp  UKFFormant.hpp  UKFFormant.puml  UKFRigollRecursion.cpp  UKFRigollRecursion.hpp  module.cpp  utilities.cpp
interfaces/: CppSound.cpp
wasm/: WASM.cmake  postjs.js
